[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "vcra-server"
description = "VCRA"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "pandas",
    "numpy",
    "requests",
    "beautifulsoup4",
    "tqdm",
    "pyarrow",
    "torch",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
]
test = ["pytest", "mypy", "ruff"]
all = [
    "mypy",
    "ruff",
]


[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true

[tool.ruff]
line-length = 127
